--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,10 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #Devtools
 spring.devtools.restart.log-condition-evaluation-delta=false
 
+#thymeleaf
 spring.thymeleaf.cache=false
+
+#redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=123456
