github第三方登录实现，解决cookie刷新后消失

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.thymeleaf.cache=false
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.password=123456
+
+github.client.id=e335ff8bb4d93e79e232
+github.client.secret=6795b4d91761ea5e88e9e15842e734449446bab0
+github.redirect.uri=http://localhost:8080/callback
